# accuracy_test

./: CMakeLists.txt  README.md  main.cpp
src/DataProcess/: DataProcess.cpp  DataProcess.h
src/PhoxiControl/: PhoxiControl.cpp  PhoxiControl.h
src/SocketClient/: SocketClient.cpp  SocketClient.h
src/SocketServer/: SocketServer.cpp  SocketServer.h
src/Widget/: Socket_thread.cpp  Socket_thread.h  Widget.cpp  Widget.h  Widget.ui
